--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="page-card button " onclick="window.location.href='Student_council/council.html' "><span> Student Council</span></div>
                 <div class="page-card button " onclick="window.location.href='Teachers/index.html' "><span> ILS Teaching Staff</span></div>
                 <div class="page-card button " onclick="window.location.href='Gallery/Timeline/Year at a glance.html' "><span> Year at a glance</span></div>
-                <div class="page-card button " onclick="window.location.href='HomePage/Editorial.html' "><span> Year at a glance</span></div>
+                <div class="page-card button " onclick="window.location.href='HomePage/Editorial.html' "><span> Editorial</span></div>
             </div>
         </section>
         <section class="high " style="height: 100vh;">
@@ -125,6 +125,21 @@
 <p><br></p>
 <p>Last year, as your Vice Head Girl, I learnt a lot which I believed would help me this year, if elected again. However, as we all know, 2020 was far from predictable. <span class="expandheadgirl" onclick="expandheadgirl()" style="text-decoration: underline; font-weight: 600; cursor: pointer;">Read More...</span</p>
 </div>
+  <div class="heads">
+        <h3 style="text-align: center; font-size: 25px;">Sahaj Falod</h3>
+    <p style="text-align: center; font-size: 20px;">Vice Head Boy</p><br>
+    <p>&quot;Change is the only thing constant in life&quot; and the year 2020-21 has been a transformational year, to say the least. The spread of Covid-19 led to a global pandemic which ultimately resulted in many changes in the education system. The school building had shut down but the school was still going on. With change comes many new opportunities, students got the time to explore and develop a passion for new creative hobbies while the teachers adopted the new methods of teaching. The school organized several different activities like online assemblies, live classes, virtual counselling sessions, online elections, virtual MUN, life hacks, online tests, and even celebrated the festivals virtually.</p>
+<p><br></p>
+<p>As a student of Indian Language School for the past 11 years, I consider myself extremely lucky to hold this honour worthy position of a Vice Head Boy and be a part of this prestigious institution. I want to thank our principal, Mrs. Gupta, vice principals, Mrs. Jain, and Mrs. Yadhav, and all the other teachers who have helped me throughout and taught me the smallest of things. I am also grateful to our heads, Tanmay and Saloni, who supported me all along. Even though this extraordinary journey is coming to an end, it will remain with me as a memory that I will proudly cherish for a lifetime!&nbsp;</p>
+  </div>
+    <div class="heads">
+        <h3 style="text-align: center; font-size: 25px;">Hemani Rao</h3>
+    <p style="text-align: center; font-size: 20px;">Vice Head Girl</p><br>
+      <p>Being a student for 13 long years in ILS, I can assuredly say that it is the best institution to be in. It is the confluence of well educated &lsquo;guiding lights &ndash; the teachers, who burn themselves through their hard work to light up the developing candles and a perfect head to lead the institution &ndash; our Principal Mrs Gupta who from day one insisted on technology-based learning even before the pandemic set in, the benefits of which we are reaping and also the willingness to transform our educational system where we do bold to drop the obsolete and start to nurture the system that can educate rather than evaluate. </p>
+<p>Students and parents of 2020, Kudos to all of us for being open to the unexpected and make room for the improbable and unlikely. What we should learn is all the planning and preparation in the world can&rsquo;t prepare you for the many twists that are coming your way, so keep a little space in your hearts for the improbable. You won&rsquo;t regret it.&nbsp;</p>
+<p>It is a matter of great distinction to be humbled by the faith reposed by you all in me as the Vice Head Girl of such an eminent school and for this, I would like to thank all those who believed in me and my abilities to lead the school.</p>
+<p>We will travel this road together and work in unison to keep the ILS banner flying high up in the sky, mounted with love, hoisted with dignity, and fluttering with grace.</p>
+  </div>
 </div>
 </section>
 <section class="footer">
