--- a/index.html
+++ b/index.html
@@ -278,12 +278,13 @@
             
             .trustee {
                 border-radius: 10px;
-                background-color: #fff;
+                background-color: #101020;
                 padding: 10px;
                 text-align: center;
                 font-size: 25px;
                 font-weight: 600;
                 cursor: pointer;
+              color: #fff;
             }
             
             .page-card {
