--- a/index.html
+++ b/index.html
@@ -439,6 +439,7 @@
                 width: 20vw;
                 object-fit: cover;
                 margin-right: 30px;
+                background-color: #fff;
             }
             
             .principal {
