--- a/Committees/C_HTML/AIC.html
+++ b/Committees/C_HTML/AIC.html
@@ -34,9 +34,21 @@
         </div>
     </div>
     <div class="article">
-        <h3 class='a_title'>Commmittee Article</h3>
+        <h3 class='a_title'>Committee Article</h3>
         <div class="text">
             <div class="actual_text">
+
+                <h2 style="text-align: center;">INNOVATION IN TEACHING AND LEARNING AT I.L.S</h2><br>
+                <p>Teaching and learning at Indian Language School was greatly influenced by the wave of &lsquo;innovative teaching&rsquo; that was rampant in the 21st century. Innovation in education can be defined &lsquo;as doing things in a new way&rsquo;. Innovation in education encourages students and teachers to research, explore, and use all the tools to uncover something new.</p>
+                <p><br></p>
+                <p>In 2020-21, the school witnessed a complete transformation from a physical teaching environment to a virtual teaching environment. Teachers and students, alike, adapted themselves to this new method, which is now the &lsquo;new normal&rsquo;. Google and Zoom classrooms soon replaced the physical classrooms, e-portfolios replaced the scrapbooks, researching replaced learning, PHET and O-labs replaced the physical school laboratories, zoom break-out rooms replaced physical discussion groups and exploration became a new norm.</p>
+                <p><br></p>
+                <p>Teachers used a variety of web applications to engage the online learners. Mentimeter, Miro Boards, Padlet, PearDeck, LiveWorksheets, Wordwall, NamesofWheels, Nearpod, GeoGebra, Quizziz, Quizlet and Kahoot to name a few were used to keep the learners focused and fascinated. The students found various means to represent their learning in the classroom by using Abode Spark, Animoto, Canva, Powtoon, StoryBoardthat; besides creating videos and podcasts with various other applications. The school also witnessed online proctored examinations, using the Think Merit portal, for the very first time. Some of the pedagogy strategies used Think-Group-Present; K-W-L Boards, Role-Audience-Format-Topic activity; Choice Boards; Project Based Learning; Exit tickets; S-I-T exit slips (Surprised- Interested-Troubled); Reflective thinking; Gallery Walk; Inquiry Based Learning; Brainstorming Sessions; Role-plays; Jigsaw puzzles; Virtual field trips; stimulations, collaborative learning, experiential learning, joyful learning and class debates.&nbsp;</p>
+                <p><br></p>
+                <p>Teachers created a variety of assignments for students which involved differentiation of tasks and learning through using multiple intelligences. Thus, students were given choices to create songs, rap music, presentations with voice over modifications, nukkad nataks, historical skits, creating 3-D models and using varied of art forms.</p>
+                <p><br></p>
+                <p>This present pandemic situation has pushed educators and learners into taking instant leaps in their learning and teaching. Such remote learning success stories reveal the power of teacher imagination and the importance of innovation when adapting to change. The transformation was not easy . But nevertheless, the never-ending journey to empower the 21st century learners has set into motion.&nbsp;</p>
+                <p><br></p><hr><p><br></p>
                 <p>It is a privilege to be in a school that not only focuses on studies but also propagates art, sports and extra curricular activities. For that we would like to start by thanking Mrs. Gupta for giving us the resources to formulate this
                     committee and our committee’s head teacher Mrs.Ramchandani for her constant support to our team members. We would like to thank our team members for being so cooperative.</p><br>
                 <p>Art Integrated learning is an approach to combining teaching in the classroom to outside real world projects through the medium of art, this way every student can acknowledge the true depths of certain topics which usually cannot be taught
