--- a/Committees/C_HTML/CDG.html
+++ b/Committees/C_HTML/CDG.html
@@ -35,7 +35,7 @@
         </div>
     </div>
     <div class="article">
-        <h3 class='a_title'>Commmittee Article</h3>
+        <h3 class='a_title'>Committee Article</h3>
         <div class="text">
             <div class="actual_text">
                 <p>It has been a life changing year for academics. Here at the curriculum development group we have been more than happy to integrate the big announcement of the year from CBSE that is the National education policy which is going to change
