--- a/Committees/C_HTML/MHAWBC.html
+++ b/Committees/C_HTML/MHAWBC.html
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div class="article">
-            <h3 class='a_title'>Commmittee Article</h3>
+            <h3 class='a_title'>Committee Article</h3>
             <div class="text">
                 <div class="actual_text">
                     <p>The Mental Health and Wellness committee was initiated in Indian Language School in the academic year 2020-21. Due to the pandemic, our school felt the need to have such a platform for the students to express themselves.</p><br><p>Our objective of the committee was to raise awareness about mental health, reduce the stigma in the society and promote help seeking behaviours. We conducted a webinar for the students of grade 9 to 12 with Ms. Aanchal Vasishta who is the founder of Reach out Together, a non-profit organisation whose aim is to empower people to break the stigma against mental health and work towards recovery. She motivated the students and encouraged them to follow their passion and work towards achieving their goals. We hope our efforts this year have been fruitful and helped everyone in every way possible.</p><br>
