--- a/Committees/C_HTML/PDC.html
+++ b/Committees/C_HTML/PDC.html
@@ -28,7 +28,7 @@
             </div>
         </div>
 <div class="article">
-        <h3 class='a_title'>Commmittee Article</h3>
+        <h3 class='a_title'>Committee Article</h3>
         <div class="text">
             <div class="actual_text">
 <p>Personality development helps you develop an impressive personality and makes you stand apart from the rest. Your personality is set by no one but you. It encompasses the actions you take and the decisions you make. You may not be able to change your personality type, but you can change aspects of your personality by taking determined, active steps to become a more balanced person.</p><br>
