--- a/Committees/C_HTML/ECOC.html
+++ b/Committees/C_HTML/ECOC.html
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div class="article">
-            <h3 class='a_title'>Commmittee Article</h3>
+            <h3 class='a_title'>Committee Article</h3>
             <div class="text">
                 <div class="actual_text">
                     <p>We, here at the Eco club make it our sole aim to spread awareness about our drastically changing environment and plant a seed of responsibility and love for the environment in each student’s hearts.</p><br><p>This is done by stressing on the students’ relationship with the environment and in the process, to make students cognizant that such a connection exists; it is imperative that we, as current inhabitants and future leaders uphold, respect and improve our ties with nature for the betterment of all living beings.</p><br><p>For the next five years, I believe the Eco Club will proceed with the same ideologies and will be able to:</p><br><p><ul><li>Find solutions to the innumerable problems related to climate change and a plethora of other environmental problems.</li></p><br><p><li>Identify the rising threats to humanity, due to environmental degradation and take a stand against them.</li></p><br><p><li>To take a step ahead by educating our students about the adverse effects of degrading the environment, because every small step counts.</li></p><br><p><li>Help prime and inculcate in students to strive and develop a healthy, self-sustainable and eco-friendly future for all.</li></ul></p><br>
