--- a/HomePage/Editorial.html
+++ b/HomePage/Editorial.html
@@ -21,7 +21,7 @@
 <p><br></p><p>It is with pride and a sense of achievement ILS announces the digitalized edition of their magazine Flying High 2020-2021. The magazine reflects the twists and turns the pandemic has made us take. With heads held high and an unmatched spirit and zeal, the ILS magazine team dedicates it to the new normal and the digitalized era.</p>
 <p><br></p><p>The student team comprised of brilliant minds like - Gaurav Shah, Rahul Philip Mathew, Nirjhar Datta, Puranjay Gambhir and Prakarsh Srivastava. Hats off to each one of them who put in numerous hours of coding, editing, proofreading, artwork to produce this masterpiece.</p>
 <p><br></p><p>The magazine committee Head Moshumi Shit supported her team by being there for them and we are always grateful to each one of them to have created history.</p>
-<p><br></p><p style="text-align: right;">Mrs. Gursharan Shergill, Mrs. Sudipa Mitra, Mrs. Tuhina Bhalekar and Mrs. Vandana Chaturvedi.</p>
+<p><br></p><p style="text-align: right;">- Mrs. Gursharan Shergill, Mrs. Sudipa Mitra, Mrs. Tuhina Bhalekar and Mrs. Vandana Chaturvedi.</p>
 <p><br></p>
 <p style="text-align: center;"><strong>Students&apos; Editorial</strong></p>
 <p style="text-align: left;"><br></p>
