--- a/HomePage/Editorial.html
+++ b/HomePage/Editorial.html
@@ -54,7 +54,7 @@
 </div>
 
 <p><br></p>
-<p>This historical edition of Flying High demanded immense hard work. Designing, coding and publishing a website of this scale from scratch is no joke. With over 400 man-hours and over 20,000 lines of code, this magazine is our pride and joy. We are elated to note that this magazine was entirely produced by students. From the articles to the artwork and to this website itself, the students of ILS are making history. We were lucky to have been working under the guidance of many talented teachers including Mrs Gurshan Shergill, Mrs Sudipa Mitra, Mrs Tuhina Bhalekar and Mrs Vandana Chaube. We would also like to give great thanks to the Magazine Committee Head, Mousoomi Shit and the other members of the magazine committee.</p>
+<p>This historical edition of Flying High demanded immense hard work. Designing, coding and publishing a website of this scale from scratch is no joke. With over 400 man-hours and over 20,000 lines of code, this magazine is our pride and joy. We are elated to note that this magazine was entirely produced by students. From the articles to the artwork and to this website itself, the students of ILS are making history. We were lucky to have been working under the guidance of many talented teachers including Mrs Gurshan Shergill, Mrs Sudipa Mitra, Mrs Tuhina Bhalekar and Mrs Vandana Chaturvedi. We would also like to give great thanks to the Magazine Committee Head, Mousoomi Shit and the other members of the magazine committee.</p>
 <p><br></p>
 <p>Throughout our journey, we were amazed by the talent displayed by our peers. Their artwork was stunning and the articles were profound. This magazine truly gave us an insight into their thoughts and feelings.</p>
 <p><br></p>
