--- a/Committees/C_HTML/CCC.html
+++ b/Committees/C_HTML/CCC.html
@@ -194,10 +194,10 @@
 
     <!-- ADDITIONAL STYLE NOT FOUND-->
 
-    <!--navigation menu-->
-    <div class="menu-container" onclick="myfunction(this)">
+     <!--Navigation Menu-->
+    <div class="menu-container" onclick="myFunction(this)">
         <iframe src="../../embed3.html" frameborder="0" class="nav-container"></iframe>
-        <abbr title="navigation menu (click)">
+        <abbr title="Navigation Menu (Click)">
                 <div class="container">
                     <div class="bar1"></div>
                     <div class="invis"></div>
@@ -206,8 +206,8 @@
             </abbr>
 
         <script>
-            function myfunction(x) {
-                x.classlist.toggle("change");
+            function myFunction(x) {
+                x.classList.toggle("change");
             }
         </script>
         <style>
@@ -233,13 +233,13 @@
             }
             
             .headings {
-                color: #06d6a0;
+                color: #06D6A0;
                 width: 350px;
                 position: absolute;
                 top: 52%;
                 left: -300px;
                 transform: translate(0%, -50%);
-                font-family: 'poppins', sans-serif;
+                font-family: 'Poppins', sans-serif;
                 font-weight: bold;
                 text-align: left;
                 font-size: 3em;
@@ -271,7 +271,7 @@
                 left: 50%;
                 transform: translate(-50%, -50%);
                 font-size: 25em;
-                font-family: 'poppins', sans-serif;
+                font-family: 'Poppins', sans-serif;
                 font-weight: bold;
                 text-align: center;
                 z-index: -1;
@@ -306,7 +306,7 @@
                 position: fixed;
                 left: -10px;
                 top: -10px;
-                background-color: #0d1321;
+                background-color: #0D1321;
                 padding: 10px;
             }
             
@@ -355,6 +355,7 @@
             }
         </style>
     </div>
+
 </body>
 
 </html>
