--- a/Committees/C_HTML/SVG.html
+++ b/Committees/C_HTML/SVG.html
@@ -179,7 +179,7 @@
             <div class="banner">
                 <img src='../C_Logos/SVG.svg' alt='Student Voice Group Logo' class="logo">
                 <h1>Student Voice Group</h1>
-                <h4>Teacher head: Mrs.S.Gupta<br>Student heads: Jainam Shah and Dhiya Eapen</h4>
+                <h4>Teacher head: Mrs.S.Gupta<br>Student Heads: Jainam Shah and Dhiya Eapen</h4>
             </div>
             <div class="members">
                 <h3>Committee Members</h3>
