--- a/embed3.html
+++ b/embed3.html
@@ -16,16 +16,16 @@
         <div class="menu">
             <div class="headings">
 
-                <div class="nav home"><a href='index.html' target='_blank'>Home</a></div>
+                <div class="nav home"><a href='index.html'>Home</a></div>
 
 
-                <div class="nav articles"><a href='Articles/article-list.html' target='_blank'>Articles</a></div>
+                <div class="nav articles"><a href='Articles/article-list.html'>Articles</a></div>
 
 
-                <div class="nav gallery"><a href='Gallery/gallery-list.html' target='_blank'>Gallery</a></div>
+                <div class="nav gallery"><a href='Gallery/gallery-list.html'>Gallery</a></div>
 
 
-                <div class="nav teachers"><a href='Teachers/index.html' target='_blank'>ILS Teaching Staff</a></div>
+                <div class="nav teachers"><a href='Teachers/index.html'>ILS Teaching Staff</a></div>
 
                 <div class="nav more" onclick="window.location.href='more.html'">More...</div>
             </div>
