--- a/Committees/C_HTML/CDG.html
+++ b/Committees/C_HTML/CDG.html
@@ -17,7 +17,7 @@
         <div class="banner">
             <img src='../C_Logos/CDG.svg' alt='Curriculum Development Group Logo' class="logo">
             <h1>Curriculum Development Group</h1>
-            <h4>Teacher head: Mrs.R.Lakhanpal<br>Student heads: Soham Chitlangia and Manas Aggarwal</h4>
+            <h4>Teacher head: Mrs.R.Lakhanpal<br>Student Heads: Soham Chitlangia and Manas Aggarwal</h4>
         </div>
         <div class="members">
             <h3>Committee Members</h3>
