--- a/Committees/C_HTML/DEAR.html
+++ b/Committees/C_HTML/DEAR.html
@@ -18,7 +18,7 @@
             <div class="banner">
                 <img src='../C_Logos/DEAR.svg' alt='D.E.A.R Committee Logo' class="logo">
                 <h1>D.E.A.R Committee</h1>
-                <h4>Teacher head: Mrs.S.Mitra<br>Student head: Manan Shah</h4>
+                <h4>Teacher head: Mrs.S.Mitra<br>Student Head: Manan Shah</h4>
             </div>
             <div class="members">
                 <h3>Committee Members</h3>
