--- a/Committees/C_HTML/FAC.html
+++ b/Committees/C_HTML/FAC.html
@@ -18,7 +18,7 @@
             <div class="banner">
                 <img src='../C_Logos/FAC.svg' alt='First Aid Committee Logo' class="logo">
                 <h1>First Aid Committee</h1>
-                <h4>Teacher head:  Coach Mooney <br>Student heads: Maurya Gajjar and Natasha Rajpal</h4>
+                <h4>Teacher head:  Coach Mooney <br>Student Heads: Maurya Gajjar and Natasha Rajpal</h4>
             </div>
             <div class="members">
                 <h3>Committee Members</h3>
