--- a/Committees/C_HTML/GAC.html
+++ b/Committees/C_HTML/GAC.html
@@ -18,7 +18,7 @@
             <div class="banner">
                 <img src='../C_Logos/GAC.svg' alt='Global Awareness Committee Logo' class="logo">
                 <h1>Global Awareness Committee</h1>
-                <h4>Teacher head:  Mrs.B. Mathew<br>Student heads: Alankrit Bharadwaj and Mehek Sarda</h4>
+                <h4>Teacher head:  Mrs.B. Mathew<br>Student Heads: Alankrit Bharadwaj and Mehek Sarda</h4>
             </div>
             <div class="members">
                 <h3>Committee Members</h3>
