--- a/Committees/C_HTML/HAWC.html
+++ b/Committees/C_HTML/HAWC.html
@@ -18,7 +18,7 @@
             <div class="banner">
                 <img src='../C_Logos/HAWC.svg' alt='Health and Wellness Committee Logo' class="logo">
                 <h1>Health and Wellness Committee</h1>
-                <h4>Teacher head: Mrs.G.Manaise<br>Student head: Amisha Kumari</h4>
+                <h4>Teacher head: Mrs.G.Manaise<br>Student Head: Amisha Kumari</h4>
             </div>
             <div class="members">
                 <h3>Committee Members</h3>
