--- a/Committees/C_HTML/IC.html
+++ b/Committees/C_HTML/IC.html
@@ -179,7 +179,7 @@
             <div class="banner">
                 <img src='../C_Logos/IC.svg' alt='Interact Club Logo' class="logo">
                 <h1>Interact Club</h1>
-                <h4>Teacher head: Mrs.A.Dhawan<br>Student heads: Deepam Dibyajyot and Avni Murarka</h4>
+                <h4>Teacher head: Mrs.A.Dhawan<br>Student Heads: Deepam Dibyajyot and Avni Murarka</h4>
             </div>
             <div class="members">
                 <h3>Committee Members</h3>
