--- a/Committees/C_HTML/SC.html
+++ b/Committees/C_HTML/SC.html
@@ -18,7 +18,7 @@
             <div class="banner">
                 <img src='../C_Logos/SC.svg' alt='Sports Committee Logo' class="logo">
                 <h1>Sports Committee</h1>
-                <h4>Teacher head: Dr.(Mrs.)P.Nagine<br>Student heads: Riya Sawant and Ajin Jose </h4>
+                <h4>Teacher head: Dr.(Mrs.)P.Nagine<br>Student Heads: Riya Sawant and Ajin Jose </h4>
             </div>
             <div class="members">
                 <h3>Committee Members</h3>
