--- a/Committees/C_HTML/SEWA.html
+++ b/Committees/C_HTML/SEWA.html
@@ -179,7 +179,7 @@
             <div class="banner">
                 <img src='../C_Logos/SEWA.svg' alt='SEWA Committee Logo' class="logo">
                 <h1>SEWA Committee</h1>
-                <h4>Teacher head: Mrs.L.Chandrashekhar<br>Student heads: Tumu Nag and Ananya Sankhe </h4>
+                <h4>Teacher head: Mrs.L.Chandrashekhar<br>Student Heads: Tumu Nag and Ananya Sankhe </h4>
             </div>
             <div class="members">
                 <h3>Committee Members</h3>
