--- a/Teachers/index.html
+++ b/Teachers/index.html
@@ -139,6 +139,9 @@
             <div class="swiper-slide"><img src="./Teacher Images/Office.svg">
                 <p>Principal with Office Staff</p>
             </div>
+            <div class="swiper-slide"><img src="./Teacher Images/Office.svg">
+                <p>Principal with Office Staff</p>
+            </div>
             <div class="swiper-slide"><img loading='lazy' src="./Teacher Images/Math.svg">
                 <p>Math Teachers</p>
             </div>
