--- a/more.html
+++ b/more.html
@@ -15,12 +15,12 @@
     <nav>
         <div class="menu">
             <div class="headings">
-                <div class="nav home"><a href='HomePage/home2.html'>Home</a></div>
-                <div class="nav articles"><a href='Student_council/council.html'>Student Council</a></div>
-                <div class="nav gallery"><a href='./Committees/C_List.html'>Committees</a></div>
-                <div class="nav teachers"><a href='./Laurels/Laurels.html'>Laurels</a></div>
-                <div class="nav more"><a href='./Gallery/Timeline/Year at a glance.html'>Timeline</a></div>
-                <div class="nav more"><a href='./Honour Roll/Honour_Roll.html'>Honour Roll</a></div>
+                <div class="nav home"><a href='HomePage/home2.html' target='_blank'>Home</a></div>
+                <div class="nav articles"><a href='Student_council/council.html' target='_blank'>Student Council</a></div>
+                <div class="nav gallery"><a href='./Committees/C_List.html' target='_blank'>Committees</a></div>
+                <div class="nav teachers"><a href='./Laurels/Laurels.html' target='_blank'>Laurels</a></div>
+                <div class="nav more"><a href='./Gallery/Timeline/Year at a glance.html' target='_blank'>Timeline</a></div>
+                <div class="nav more"><a href='./Honour Roll/Honour_Roll.html' target='_blank'>Honour Roll</a></div>
             </div>
             <div class="nb">Other links</div>
 
