--- a/Committees/C_HTML/MC.html
+++ b/Committees/C_HTML/MC.html
@@ -192,7 +192,8 @@
             <h3 class='a_title'> </h3>
             <div class="text">
                 <div class="actual_text">
-                    &nbsp;
+                    <p>Indian Language School has given me some memorable experiences that I will cherish throughout my life. I would like to express my special thanks of gratitude to our respected Principal, Mrs.S.Gupta, and my headteacher, Mrs.G.Shergill who gave me the opportunity to be the head of the Magazine Committee. I am also thankful to my sweet and hardworking teammates who were very cooperative despite all the constraints we have had during this unfortunate year due to COVID-19.&nbsp;</p>
+<p>The shift from classroom learning to online learning has been drastic but we are dealing gallantly with this new phenomenon. With the guidance of Mrs.G.Shergill, our team was able to present an E-magazine on the benefits of writing and how it is connected to reading. The school will be having its first E-magazine which has been put together by the efforts of the editing team and the magazine committee.</p>
                 </div>
             </div>
         </div>
