--- a/Committees/C_HTML/HOLC.html
+++ b/Committees/C_HTML/HOLC.html
@@ -192,7 +192,17 @@
             <h3 class='a_title'> </h3>
             <div class="text">
                 <div class="actual_text">
-                    &nbsp;
+                    <p>Working for a committee amidst a pandemic was definitely not something any of us were prepared for but one thing we as committee heads learned was, in the middle of every difficulty lies opportunity and if it doesn&rsquo;t, you don&rsquo;t wait for it, you create it.&nbsp;</p>
+<p>As 2020 comes to an end, both of us would wish to thank Indian Language School for all the chances and experiences we had in the middle of this chaotic year because they helped us to learn and mold ourselves into more developed individuals throughout Class XII.&nbsp;</p>
+<p>If there is one thing each of us carried throughout this year, it was hope. Hope that better things are ahead of us.</p>
+<p>EVENTS CONDUCTED:</p>
+<p><strong>i) Online Mental Health &amp; Wellness Workshop with Mrs Jhunjhunwala.</strong></p>
+<p>Our objective of getting Mrs. Anisha to speak to the students was to endorse and inculcate emotional intelligence among the students, for a happy living through this workshop.</p>
+<p>Mental health issues are not a personal weakness and can arise because of many factors as discussed in the session which taught us to not feel helpless, worthless or guilty and instead take ownership and use self-care strategies to feel better.</p>
+<p>We learnt that one can express how to feel through any form of art, be it writing, drawing, dancing.We also shared a link to chat online with a trained counselor: <a href="https://findhope.in/freecounselingform" rel="noopener noreferrer" target="_blank">https://findhope.in/freecounselingform</a></p>
+<p>ii) <strong>Created an app (ActiveEd) to emphasise on the benefits of Concept Mapping, Brain Writing and Sketch Noting and presented this in the assembly on 3rd December 2020</strong></p>
+<p>Recognizing how learning cannot be stopped, even if we&rsquo;re in a pandemic, the Hubs of Learning Committee, headed by Akash Balaji and Anahita Sharma took this initiative and spoke about how the app encourages enhanced expression of thoughts, concepts, ideas and is a good way to condense school notes, especially for visual learners. It&rsquo;s about how drawing prompts students to visualize their understanding and look at their learning from their own perspective.</p>
+<p>So what if we couldn&rsquo;t cover classroom walls with sticky notes or chart papers this year; the grass is greener when you water it!</p>
                 </div>
             </div>
         </div>
