--- a/index.html
+++ b/index.html
@@ -302,6 +302,7 @@
                 text-align: center;
                 font-size: 25px;
                 font-weight: 600;
+                cursor:default;
                 color: #fff;
             }
             
