--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <br>
                 <p> With all of us getting vaccinated for COVID by the mid or this year or little later we are going to look behind us and say, it’s over and here we are together standing strong as ever and back at Indian Language School. </p><br>
                 <p>Take care! I look forward to seeing you all in person. </p>
-                <h4>Mrs. Sonali Gupta</h4>
+                <h6 class="principal-name">Mrs. Sonali Gupta</h6>
             </div>
         </section>
 
