--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                 <p>The school has reopened in a limited way and we have conducted the Preliminary Examination for the grades X and XII with the minimum staff on the school campus. Proper Social distancing is being observed in and around the school. </p>
                 <br>
                 <p> With all of us getting vaccinated for COVID by the mid or this year or little later we are going to look behind us and say, it’s over and here we are together standing strong as ever and back at Indian Language School. </p><br>
-                <p>Take care! I look forward to seeing you all in person. </p>
-                <h3>Mrs. Sonali Gupta</h3>
+                <p>Take care! I look forward to seeing you all in person. </p><br><br>
+                <h3 style="text-align: right;">Mrs. Sonali Gupta</h3>
             </div>
         </section>
 
