--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 frameborder="0 " width="100% " height="100% "></iframe>
         </section>
         <section class="principal">
-            <img src="./HomePage/Mrs Sonali Gupta.jpg" alt="Principal Image " class="p-img ">
+            <img src="./HomePage/Mrs Sonali Gupta.jpg" alt="Principal Image " class="p-img">
             <div class="p-message">
                 <h2 class="p-title">Principal's Message</h2>
                 <p> This year has been a very unusual year for all the mankind globally. The COVID- 19 pandemic has
@@ -107,7 +107,7 @@
         </section>
 
         <section class="principal vicep">
-            <img src="Jain.png" alt="Vice Principal Image " class="p-img ">
+
             <div class="p-message">
                 <h2 class="p-title">Vice Principal's Message</h2>
                 <h3>Parental Responsibility</h3>
@@ -141,6 +141,7 @@
                 <p><br></p>
                 <h3 style="text-align: right;">- Dr. Mrs. Manisha Jain</h3>
             </div>
+            <img src="Jain.png" alt="Vice Principal Image " class="p-img vp-img">
         </section>
 
         <section>
@@ -634,18 +635,25 @@
                 display: -ms-flexbox;
                 display: flex;
             }
-            .senior-leaders{
+
+            .senior-leaders {
                 display: grid;
                 grid-template-columns: 1fr 1fr;
                 color: white;
                 grid-gap: 50px;
             }
-            .senior-teacher-images{
+
+            .senior-teacher-images {
                 width: 100%;
                 height: 100%;
                 border-radius: 10px;
                 object-fit: contain;
                 background-color: #050514;
+            }
+
+            .vp-img {
+                margin-right: 0;
+                margin-left: 50px;
             }
         </style>
 
@@ -669,7 +677,8 @@
                 b {
                     color: white;
                 }
-                .senior-leaders{
+
+                .senior-leaders {
                     grid-template-columns: 2fr 1fr;
                 }
             }
@@ -751,6 +760,11 @@
                     max-height: 80vh;
                 }
 
+                .vp-img {
+                    margin-top: 30px;
+                    margin-bottom: 0;
+                }
+
                 .p-title {
                     margin: 20px 0;
                     text-align: center;
@@ -775,7 +789,8 @@
                     width: 100%;
                     text-align: center;
                 }
-                .senior-leaders{
+
+                .senior-leaders {
                     grid-template-columns: 1fr;
                 }
             }
