--- a/Gallery/Timeline/Year at a glance.html
+++ b/Gallery/Timeline/Year at a glance.html
@@ -20,14 +20,14 @@
             <h2>April - May</h2>
             <div class="events">
                 <div class="event">Transition to online learning and teaching <img src="./Images/April1.png" alt="Transition to online learning and teaching"></div>
-                <div class="event">Online school elections <img src="Gallery/Timeline/Images/April-May Online Elections.png" alt="Online School Elections"></div>
+                <div class="event">Online school elections <img src="./Images/April-May Online Elections.png" alt="Online School Elections"></div>
                 <div class="event">Virtual meets and Conferences</div>
             </div>
         </div>
         <div class="month june">
             <h2>June</h2>
             <div class="events">
-                <div class="event">HMUN Dubai <img src="Gallery/Timeline/Images/June HMUN.png" alt="HMUN Dubai"></div>
+                <div class="event">HMUN Dubai <img src="./Images/June HMUN.png" alt="HMUN Dubai"></div>
             </div>
         </div>
         <div class="month july">
@@ -37,7 +37,7 @@
                 <div class="event">Mental Health Awareness Session Ms.Aanchal Vashistha</div>
                 <div class="event">Online Mental Health & Wellness Workshop with Mrs. Jhunjhunwala.</div>
                 <div class="event">Lifestyle Diseases and Oral Health Session- Rotary</div>
-                <div class="event">ILS Webinar- Navigating New Normal With Strengthened Bonds. <img src="Gallery/Timeline/Images/July Navigating New Normal.png" alt="ILS Webinar- Navigating New Normal With Strengthened Bonds"></div>
+                <div class="event">ILS Webinar- Navigating New Normal With Strengthened Bonds. <img src="./Images/July Navigating New Normal.png" alt="ILS Webinar- Navigating New Normal With Strengthened Bonds"></div>
                 <div class="event">Parents’ Orientations on Digital Education in the New Normal.</div>
             </div>
         </div>
@@ -53,7 +53,7 @@
                 <div class="event">Arwachin Inter School Online Debate Competition</div>
                 <div class="event">Meeting With Ex- ILS Principal & Present Trustee of ILS Dr(Mrs.) Suman Kanwar</div>
                 <div class="event">Annual Prize Giving <img src="./Images/August7.png" alt="Annual Prize Giving"></div>
-                <div class="event">Online webinar with Dr. Joseph Emmanuel, Director Academics, CBSE India <img src="Gallery/Timeline/Images/August Dr Joseph Emmanuel.png" alt="Online webinar with Dr. Joseph Emmanuel, Director Academics, CBSE India"></div>
+                <div class="event">Online webinar with Dr. Joseph Emmanuel, Director Academics, CBSE India <img src="./Images/August Dr Joseph Emmanuel.png" alt="Online webinar with Dr. Joseph Emmanuel, Director Academics, CBSE India"></div>
             </div>
         </div>
         <div class="month september">
@@ -61,7 +61,7 @@
             <h2>September</h2>
             <div class="events">
                 <div class="event">Teachers’ Day Celebrations<img src="./Images/September1.png" alt="Teachers’ Day Celebrations"> </div>
-                <div class="event">Indian High Commission Facilitation <img src="Gallery/Timeline/Images/September Indian High Commision.png" alt="Indian High Commission Facilitation"></div>
+                <div class="event">Indian High Commission Facilitation <img src="./Images/September Indian High Commision.png" alt="Indian High Commission Facilitation"></div>
                 <div class="event">Half Yearly Online Examinations</div>
                 <div class="event">Greenagers- International School Award Collaborative Programme</div>
                 <div class="event">The British Council’s ISA Collaborating Project- 'Nutrilicious'</div>
@@ -102,7 +102,7 @@
             <div class="events">
                 <div class="event">Fit India<img src="./Images/December1.png" alt="Fit India"></div>
                 <div class="event">Mathematics Day</div>
-                <div class="event">Christmas Celebrations <img src="Gallery/Timeline/Images/December.png" alt="Christmas Celebrations"></div>
+                <div class="event">Christmas Celebrations <img src="./Images/December.png" alt="Christmas Celebrations"></div>
             </div>
         </div>
         <div class="month january">
